--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,18 @@ body{
     width: 80px;
 }
 
+#boton-mascota{
+    border-radius: 20px;
+    border: 2px solid #FF2E63;
+    background-color: transparent;
+    color: #EAEAEA;
+    font-family: 'Times New Roman', Times, serif;
+    margin:30px 0px 0px 0px;
+    width: 125px;
+    height: 50px;
+    font-size: 20px;
+}
+
 input {
     display: none;
 }
