--- a/styles.css
+++ b/styles.css
@@ -63,4 +63,18 @@ input {
     display: none;
 }
 
+#seleccionar-ataque{
+    flex-direction: column;
+    align-items: center;
+}
+.boton-ataques{
+    background-color: #EAEAEA;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    border-color: transparent;
+    color: #252A34;
+    font-family: 'Times New Roman', Times, serif;
+}
+
 
