--- a/styles.css
+++ b/styles.css
@@ -77,4 +77,24 @@ input {
     font-family: 'Times New Roman', Times, serif;
 }
 
+#mensajes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 280px;
+    background-color: #08D9D6;
+    padding: 10px;
+    box-sizing: border-box; 
+    color: #252A34;
+    border-radius: 20px;
+    margin: 20px 10px 10px 10px;
+}
+
+#boton-reiniciar{
+    border: transparent;
+    color: #FF2E63;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: transparent;
+
+}
 
