--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
     font-size: 24px;
 }
 
-.tarjetas{
+.tarjetas, .tarjetas-ataques{
     display: flex;
     gap:10px
 }
@@ -101,4 +101,23 @@ input {
 .ataques{
     display: grid;
     grid-template-columns: 100px 100px;
+    color: #EAEAEA;
+}
+
+#vidas-jugador, #vidas-enemigo {
+    font-size: 32px;
+    margin-bottom: 0;
+}
+
+.ataques-del-jugador, .ataques-del-enemigo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media(max-width: 360px){
+    .tarjetas, .tarjetas-ataques{
+        flex-direction: column  ;
+    }
+
 }
