--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ input {
     display: none;
 }
 
+input:checked +label{ 
+    background-color: #08D9D6;
+}
+
 #seleccionar-ataque{
     flex-direction: column;
     align-items: center;
